--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev:server": "node src/server/main.js",
+    "dev:client": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "express": "^4.19.2",
+    "pinia": "^2.1.7",
+    "vite-express": "*",
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
